css/master.css
/* regole generali */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
}
li {
  list-style: none;
}
a {
  text-decoration: none;
  color: lightgray;
}
.conteiner-flex {
  display: flex;
  text-align: center;
}
/* regole selettive */
.conteiner {
  height: calc(100vh - 120px);
}

/* nav upgrade */
.nav-upgrade {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
}
.flex-nav {
  width: 100vw;
  height: 80px;
  line-height: 80px;
  padding: 0 15px;
  color: white;
  display: flex;
  justify-content: space-between;
}
.nav-upgrade h1 {
  display: inline-block;
}
.testo-upgrade a {
  border: 1px solid white;
  border-radius: 25px;
  padding: 10px 30px;
  text-decoration: none;
  color: white;
}

/* barra di navigazione */
nav ul {
  display: flex;
  justify-content: center;
  padding: 20px 0;
  height: 65px;
}
nav ul li {
  padding: 0 10px;
}
.barra-verde {
  height: 2px;
  background-color: #adff2f;
  width: 40%;
  margin: 0 auto;
  margin-top: 2px;
  display: none;
}
nav ul li:hover .barra-verde {
  display: block;
}
/* playlist */
.col-playlist {
  background-color: black;
  width: 200px;
  height: calc(100vh - 120px);
  padding: 80px 15px 15px 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.col-playlist img {
  width: 25px;
}
.icona-libreria {
  line-height: 30px;
}
#lista-sx {
  padding: 10px 0;
}
#icona-plus {
  display: inline-block;
  background-color: #a3a3a3;
  padding: 10px;
}
/* parte centrale laterale dx */
.conteiner {
  display: flex;
}

.corpo-principale {
  background-color: #141922;
  height: calc(100vh - 120px);
  width: calc(100vw - 200px);
  padding-top: 80px;
}
main section .box {
  padding: 14px;
  width: calc(100% / 6)
}
main section .box img {
  width: 100%;
}

/* barra del player */
.navbar-player {
  background-color: #282828;
  width: 100vw;
  height: 120px;
  display: flex;
  align-items: center;
}
/* flex-item di navbar-player */
.player {
  flex-basis: calc(100vw / 3);
  padding: 0 5px;
}
/* div player sx */
.player div, .player > a {
  padding: 0 10px;
}
.player-sx {
  display: flex;
  align-items: center;
}
.player-cx {
  text-align: center;
  justify-content: center;
}
.conteiner-barra {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 10px 0;
}
.player-dx {
  display: flex;
  justify-content: flex-end;
}
#i-play {
  font-size: 35px;
}
/* barra grigia del player */
.barra-player {
  height: 5px;
  border-radius: 10px;
  background-color: gray;
  width: 50%;
  margin: 6px 20px;
  align-self: flex-end;
}
.barra-player-dx {
  height: 5px;
  border-radius: 10px;
  background-color: gray;
  width: 150px;
  margin: 0 10px;
  align-self: center;
}
/* debug nav player */
.navbar-player img {
  width: 50px;
}

/* regole di debug */

